

2018-06-19 niel
	Fix: Update ./zed command to switch directories, so that lithium considers it part of the main
		app. This is necessary as lithium v1.2 treats the commands differently if outside the 'app'
		directory, breaking our console commands because of the use of a model in
		app/config/connections.php.
2018-06-16 niel
	Chg: Merging in lithium v1.2 (dev-li3-v1,2 branch) changes into dev.
2018-06-12 niel
	Fix: Correct use statement for Groups model.
2018-06-08 niel
	Fix: Correct calls of isValidGroup to isValidName for Groups model.
2018-06-07 niel
	Mrg: dev-groups This branch brings changes to how the groups table is used. A new Groups Model
		is now the default way to access it. The older methods still work but are deprecated and
		will be removed in the future.
2018-04-23 niel
	Chg: Remove 'releases' column from groups listing and browse group.
2018-06-04 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.7.0


2018-05-25
	Fix: Replacing last use of each() in nZEDb code. Note that two libraries (forkdaemon and
		guzzlehttp/promises) still use it however.
2018-05-08 niel
	Chg: Increase size of 'xref' column in collections' tables due to some larger sizes reported.
2018-05-07 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.6.0


2018-05-03 niel
	Chg: Remove unnecessary '\n' from start of 'release have been disabled/terminated by Releases'
2018-05-02 niel
	Fix: Added statement termination (';') to Tmux main window update strings. Prevents the shell
		from interpreting them as one statement.
2018-04-16 niel
	Mrg: dev-console-command-verify branch. This adds the 'tpg' option (to './zed verify tables'
		sub-command), which checks for missing tables of active groups. It does not delete tables of
		inactive groups.
2018-04-05 niel
	Fix: Missing PHPMailer object creation.
2018-04-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.5.0


2018-03-23 niel